Add clear script and Graal